# comfyui-svdint4

./: .gitignore  README.md  loader.py  nodes.py  requirements.txt
kernel/: .gitignore  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.py
kernel/csrc/: bindings.cpp  dispatch_utils.h  dispatcher.cu  gemm_base.cuh  gemm_instantiations.cu  gemm_utils.cuh  gemm_w4a4.cuh  kernel_api.h  lora.cuh  mma_earlycuda.cuh  runtime.h  svdint4_gemm.cuh  utils.cuh
kernel/scripts/: build_wheel.ps1  build_wheel.py  build_wheel.sh
kernel/svdint4/: __init__.py  ops.py  packing.py
scripts/: repack_single_file.py  smoke_test.py
