[build-system]
requires = ["setuptools>=69", "wheel", "torch>=2.7", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "svdint4-kernel"
version = "0.1.0"
description = "Minimal SVDQuant INT4 GEMM + SVD correction PyTorch extension"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "LICENSES/*", "NOTICE"]
authors = [
  { name = "svdint4 contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=2.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["svdint4*"]
